Fixed overflow-x problems

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Tenor+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Telex&display=swap");
 
+.body {
+  width: 100%;
+}
+
 .carousel {
   width: 100%;
   height: auto;
