--- a/css/variables.css
+++ b/css/variables.css
@@ -7,6 +7,7 @@ html {
   padding-top: 60px;
   width: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 button {
